# form

./: .lcovrc  INSTALL  README.md  configure.ac
.github/: dependabot.yml
.github/actions/setup-build/: action.yml
.github/workflows/: deploy.yml  stale.yml  test.yml
check/: check.rb  coverage.frm  examples.frm  features.frm  fixes.frm  polynomial.frm
doc/: Makefile.am  form.1.in
doc/manual/: float.tex  functions.tex  prepro.tex  statements.tex
scripts/: git-version-gen.sh
sources/: Makefile.am  argument.c  checkpoint.c  compcomm.c  compiler.c  declare.h  diagrams.c  diawrap.cc  dict.c  dollar.c  evaluate.c  execute.c  flintinterface.cc  flintwrap.cc  float.c  form3.h  ftypes.h  function.c  grcc.cc  if.c  inivar.h  message.c  module.c  mpi.c  mpidbg.h  names.c  normal.c  padic.c  parallel.c  parallel.h  pre.c  proces.c  ratio.c  reshuf.c  sch.c  setfile.c  sort.c  spectator.c  startup.c  store.c  (+5 more)
